fix for overflow, scroll, ie11

--- a/assets/styles/need-to-organize.scss
+++ b/assets/styles/need-to-organize.scss
@@ -1,7 +1,7 @@
 
 #__layout {
     max-width: 100%;
-    overflow: hidden;
+    overflow-y: auto;
   }
   pre {
     max-width: 100%;
